# symbolic-math

./: .gitignore  CMakeLists.txt  symbol.hpp  test.cxx
src/include/: symbol.hpp
test/: CMakeLists.txt
test/symbol/: expression_unittest.cc  scalar_unittest.cc
test/symbol/impl_/: exp_unittest.cc
